--- a/src/index.html
+++ b/src/index.html
@@ -18,6 +18,16 @@
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="http://mplus-fonts.sourceforge.jp/webfonts/basic_latin/mplus_webfonts.css"
+    />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="http://mplus-fonts.sourceforge.jp/webfonts/general-j/mplus_webfonts.css"
+    />
   </head>
   <body>
     <app-root></app-root>
