--- a/src/index.html
+++ b/src/index.html
@@ -19,14 +19,8 @@
       rel="stylesheet"
     />
     <link
+      href="https://fonts.googleapis.com/css2?family=M+PLUS+1p:wght@500;800&display=swap"
       rel="stylesheet"
-      type="text/css"
-      href="http://mplus-fonts.sourceforge.jp/webfonts/basic_latin/mplus_webfonts.css"
-    />
-    <link
-      rel="stylesheet"
-      type="text/css"
-      href="http://mplus-fonts.sourceforge.jp/webfonts/general-j/mplus_webfonts.css"
     />
   </head>
   <body>
